# hos-dashboard

./: .env_example  .gitignore  HoS Data App.py  README.md  pyproject.toml  requirements.txt
backend/: clickhouse.py  flipside.py
data_manager/: clickhouse_data.py  flipside_data.py  helper_market_cap.py
pages/: 1_Market Share.py  2_Net Flows.py  3_Supply.py
queries/: cmc_ai_cohort.sql  cmc_l1_cohort.sql  cmc_total_market_cap.sql  inflows_by_exchange.sql  labels.sql  near_price_feed.sql  staked_top_holders_by_date.sql  staked_top_holders_today.sql  supply.sql  top_100_diffs.sql  top_holders.sql  top_holders_monthly.sql  top_movers.sql  tvl.sql
